--- a/css/style.css
+++ b/css/style.css
@@ -163,3 +163,51 @@ img {
 .hero__link {
     color: #ffd723;
 }
+
+.services {
+    padding: 150px 0;
+}
+
+.services__title {
+    margin-bottom: 60px;
+    max-width: 607px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 46px;
+    color: #4d533c;
+}
+
+.services__list {
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.list__item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    min-height: 255px;
+}
+
+.item__subtitle {
+    max-width: 190px;
+    margin-bottom: 20px;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 34px;
+    text-transform: uppercase;
+    color: #4D533C;
+}
+
+.item__descr {
+    max-width: 180px;
+    font-size: 14px;
+    line-height: 26px;
+    color: rgba(33, 56, 66, 0.6);
+}
+
+.item__link {
+    margin-bottom: 0;
+    margin-top: auto;
+}
