--- a/css/style.css
+++ b/css/style.css
@@ -407,11 +407,17 @@ img {
 }
 
 @media (max-width: 768px) {
-    
+    .get-started__title {
+        font-size: 54px;
+        line-height: 60px;
+    }
 }
 
 @media (max-width: 576px) {
-    
+    .get-started__title {
+        font-size: 42px;
+        line-height: 54px;
+    }
 }
 
 @media (max-width: 375px) {
