--- a/css/style.css
+++ b/css/style.css
@@ -418,8 +418,29 @@ img {
         font-size: 42px;
         line-height: 54px;
     }
+
+    .footer__middle {
+        gap: 40px;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .hero__title {
+        font-size: 50px;
+        line-height: 60px;
+    }
+
+    .services {
+        padding: 50px 0;
+    }
+
+    .list__item {
+        min-height: 270px;
+    }
+
+    .footer__bottom {
+        flex-direction: column;
+    }
 }
 
 @media (max-width: 375px) {
-    
 }
