--- a/css/style.css
+++ b/css/style.css
@@ -443,4 +443,26 @@ img {
 }
 
 @media (max-width: 375px) {
+    .logo {
+        width: 65%;
+    }
+
+    .hero__title {
+        font-size: 40px;
+        line-height: 50px;
+    }
+
+    .services__list {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .list__item {
+        min-height: 190px;
+    }
+
+    .column__mail {
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 30px;
+    }
 }
